[INTERNAL][FIX] sap.m.OverflowToolbar: Fixed wrong truncation
Problem:
When sap.m.MenuButton goes to the popover of OverflowToolbar its text
is truncated.

Fix:
Forced MenuButton to be stretched to 100% when it is in the popover.

BCP: 2070099053

--- a/src/sap.m/src/sap/m/themes/base/OverflowToolbarAssociativePopover.less
+++ b/src/sap.m/src/sap/m/themes/base/OverflowToolbarAssociativePopover.less
@@ -86,6 +86,10 @@
 	  max-width: 100% !important;
 	}
 
+	/* Menu Button */
+	&> .sapMMenuBtn {
+		max-width: 100% !important;
+	}
   }
 }
 
